[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Intro.gd" type="Script" id=1]
[ext_resource path="res://sprites/misc/black.png" type="Texture" id=2]
[ext_resource path="res://sprites/misc/newgroudns_logo.png" type="Texture" id=3]
[ext_resource path="res://addons/newgrounds/NewGroundsAPI.gd" type="Script" id=4]
[ext_resource path="res://addons/newgrounds/ng16.png" type="Texture" id=5]
[ext_resource path="res://fonts/data/Clock.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("NewgroundsLogo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InfoLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0352941 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade2"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Screen/Warning:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Screen/Warning2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 318.007, 177.84 )
scale = Vector2( 31.4932, 19.6593 )
texture = ExtResource( 2 )

[node name="NewgroundsLogo" type="Sprite" parent="."]
position = Vector2( 298.5, 140 )
texture = ExtResource( 3 )

[node name="NewGroundsAPI" type="HTTPRequest" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
applicationId = "49623:wi13IyPW"

[node name="InfoLabel" type="Label" parent="."]
margin_top = 213.0
margin_right = 598.0
margin_bottom = 302.0
custom_fonts/font = ExtResource( 6 )
text = "Logging on Newgrounds...

Please Stand By."
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )
anims/fade2 = SubResource( 2 )

[node name="Screen" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Warning2" type="Label" parent="Screen"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 250.0
margin_top = 30.0
margin_right = 362.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.803922, 0.129412, 0.129412, 1 )
text = "WARNING"

[node name="Warning" type="Label" parent="Screen"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -2.0
margin_top = 90.0
margin_right = 598.0
margin_bottom = 163.0
custom_fonts/font = ExtResource( 6 )
text = "This game is better played on full-screen mode.  Press \"F\" or \"TAB\" at any time to activate this mode."
align = 1
valign = 1
autowrap = true

[node name="LastScreenTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

